# anonymous-studio-fork

./: .env.example  Makefile  README-01KK3HD6XASYB4PYXQDN7F2F68.md  README-01KK3HSXD5W16P3GH8NETA68P5.md  README.md  RUN_SPRINT5_DEMO.sh  SPRINT5_DEMO_SCRIPT.md  app.css  app.py  config.toml  main.py  notification.py  pii_engine.py  preview_tokens.py  pyproject.toml  pytest.ini  requirements.txt  rest_main.py  scheduler.py  tasks.py  test_submit.py
.claude/: settings.json
.claude/agents/: auth0-security-engineer-01KK3HSXD5W16P3GH8NETA68P5.md  auth0-security-engineer.md  dataviz-nerd.md  taipy-architect.md  user-story-migrator.md
.github/: copilot-instructions.md  labels.yml
.github/workflows/: auto-delete-branch.yml  ci.yml
deploy/auth-proxy/: .env.auth-proxy.example  README.md  nginx.conf
docs/: feature-parity.md
pages/: definitions.py
scripts/: auth0_update_app.sh  check_auth_stack.sh  demo_seed.py  dev_auth_doctor.sh  dev_auth_down.sh  dev_auth_stack.sh
services/: app_context.py  auth0_rest.py  auth_identity.py  authz.py  geo_signals.py  job_progress.py  jobs.py  local_auth.py  notifications.py  pii_image.py  synthetic.py  telemetry.py
store/: __init__.py  base.py  duckdb.py  memory.py  models.py  mongo.py
tests/: conftest.py  test_app_file_upload_download.py  test_attestation_identity.py  test_auth0_rest.py  test_authz.py  test_demo_track.py  test_export.py  test_local_auth.py  test_main_exports.py  test_openfga_seed.py  test_sprint3_features.py  test_store.py  test_store_mongo.py  test_taipy_mockstate_smoke.py
ui/: theme.py
(+15 files in other folders)
