[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anonymous-studio"
version = "0.1.0"
description = "De-identified data pipelines — Taipy GUI + taipy.core PII anonymization app"
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [
    { name = "Carley Fant" },
    { name = "Sakshi Patel" },
    { name = "Diamond Hogans" },
    { name = "Elijah Jenkins" },
]
dependencies = [
    "taipy>=3.1.0,<4.2",
    "presidio-analyzer>=2.2.35",
    "presidio-anonymizer>=2.2.35",
    "spacy>=3.7.0,<3.9",
    "pandas>=2.2.0,<4.0.0",
    "openpyxl>=3.1.2,<=3.1.5",
    "chardet<8",
    "faker>=24.0.0",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.8.0,<3",
    "pymongo[srv]>=4.7",
    "mongomock>=0.4",
    "dask[dataframe]>=2024.8.0",
    "duckdb>=1.0.0",
    "openai>=1.40.0",
    "prometheus_client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "scripts*", "deploy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:The 'default' argument to fields is deprecated\\. Use 'dump_default' instead\\.:marshmallow.warnings.RemovedInMarshmallow4Warning",
]
